<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/itemRootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:orientation="horizontal">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_8"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewStartDate"
            style="@style/MyObject.Content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewStartDate" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewEndDate"
            style="@style/MyObject.Content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewEndDate" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/duration"
            style="@style/MyObject.Content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration" />

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/description"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</android.support.v7.widget.LinearLayoutCompat>